# index.js
@@ -6,6 +6,7 @@ import dotenv from "dotenv"
 import authRoutes from "./routes/authRoutes.js"
 import userRoutes from "./routes/userRoutes.js"
 import cardRoutes from "./routes/cardRoutes.js"
+import portfolioRoutes from "./routes/portfolioRoutes.js"
 import swaggerUi from 'swagger-ui-express'
 
 import { createRequire } from "module";
@@ -22,6 +23,7 @@ app.use(cors());
 app.use("/auth", authRoutes)
 app.use("/user", userRoutes)
 app.use("/cards", cardRoutes)
+app.use("/portfolio", portfolioRoutes)
 
 app.get("/", (req, res) => {
     res.send("Hello guys!!!!");
