# swagger_output.json
@@ -444,6 +444,35 @@
           }
         }
       }
+    },
+    "/portfolio/create_portofolio/{id}": {
+      "post": {
+        "tags": [
+          "Portfolio"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
     }
   }
 }
